--- a/style.css
+++ b/style.css
@@ -70,12 +70,18 @@ body {
 
 }  
 
-#imglogin {
+#imglogin  {
     
     width: 80px;
     border-radius: 50%;
     margin-bottom: 10px ;
     
+  }
+
+  #compimg   {
+
+    width: 80px;
+
   }
 
 .medialoginimg {
