--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ body {
 
 .jumbotron {
 
+    
     background: transparent;
+    padding-top: 10px ;
+    padding-bottom  : 10px ; 
+    margin-bottom: 10px ;
 
 }    
 
